--- a/css/fractionslider.css
+++ b/css/fractionslider.css
@@ -34,44 +34,41 @@
 
 .fs_loader{
 	width:100%; height:400px;
-	background:url(images/fs.spinner.gif) center center no-repeat transparent;
+	background:url(../pics/fs.spinner.gif) center center no-repeat transparent;
 }
 
 /** CONTROLS **/
 
 .fraction-slider .prev,
 .fraction-slider .next{
-	display:none;
+	display:block;
 	position:absolute;
-	width:45px; height:45px;
+	width:50px; height:74px;
 	z-index:9999;
+	opacity: 0.7;
 }
 
 .fraction-slider .prev{
 	left:10px; top:45%;
-	background:url(images/fs.prevnext.png) 0px 0px no-repeat transparent;
-	
+	background:url(../pics/arrowPrev.png) 0px 0px no-repeat transparent;	
 }
 .fraction-slider .prev:hover{
-	background:url(images/fs.prevnext.png) 0px -45px no-repeat transparent;
+	opacity:1;
 }
 
 .fraction-slider .next{
 	right:10px; top:185px;
-	background:url(images/fs.prevnext.png) -45px 0px no-repeat transparent;
+	background:url(../pics/arrowNext.png) 0 0px no-repeat transparent;
 }
 .fraction-slider .next:hover{
-	background:url(images/fs.prevnext.png) -45px -45px no-repeat transparent;
+	opacity:1;
 }
 
-.fraction-slider:hover .prev,
-.fraction-slider:hover .next{
-	display:block;
-}
 
 /** PAGER **/
 
 .fs-pager-wrapper{
+	display:none;
 	position:absolute;
 	left:10px; bottom:10px;
 	z-index:9999;	
@@ -81,8 +78,8 @@
 	display:inline-block;
 	width:14px; height:14px;
 	margin:0 5px 0 0;
-	background:url(images/fs.pager.png) 0px -14px no-repeat transparent;
+	background:url(../pics/fs.pager.png) 0px -14px no-repeat transparent;
 }
 .fs-pager-wrapper .active{
-	background:url(images/fs.pager.png) 0px 0px no-repeat transparent;
+	background:url(../pics/fs.pager.png) 0px 0px no-repeat transparent;
 }
