--- a/css/styleLandingPage.css
+++ b/css/styleLandingPage.css
@@ -308,6 +308,7 @@ ul.listItemMnu li.hover a,ul.listItemMnu li.actedTab a {
 	width: 100%;
 	height: 724px;
 }
+.slide{cursor: pointer;}
 .emag-row1{
 	margin: 65px 0 0 50px;
 	width: 875px;
